# Master

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Model.md  Readme.md  conan_toolchain.cmake  conanfile.py  conanfile.txt  greedy.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  setup.sh
conan_build/: CMakePresets.json  FindSQLite3.cmake  SQLite3-debug-x86_64-data.cmake  SQLite3Config.cmake  SQLiteCpp-Target-debug.cmake  SQLiteCpp-Target-release.cmake  SQLiteCpp-debug-x86_64-data.cmake  SQLiteCpp-release-x86_64-data.cmake  SQLiteCppConfig.cmake  SQLiteCppTargets.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-debug-x86_64.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-debug-x86_64.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  module-SQLite3-Target-debug.cmake  module-SQLite3-release-x86_64-data.cmake
config/: README.md  mdvsp_config.ini
database/: mdvsp_solutions.db
include/core/: MDVSPUtils.hpp  SolutionConverter.hpp  SolutionTransformer.hpp  Solver.hpp  UnifiedSolution.hpp  UnifiedSolutionDatabase.hpp
include/data/: DataLoader.hpp  DataStructures.hpp
include/exact/: Callback.hpp  Config.hpp  GurobiSolver.hpp  MDVSPFileHandler.hpp  MDVSPSolution.hpp
include/greedy/: GreedyDatabaseSaver.hpp  GreedyMDVSPSolver.hpp  GreedySolutionPrinter.hpp
include/mdvsp/: MDVSPAnalyzer.hpp  MDVSPConfigurator.hpp  MDVSPFileHandler.hpp  MDVSPSolver.hpp
results/: greedy_solution.txt  mdvsp_solution.txt
scripts/: parse_mdvsp.py
src/: main.cpp  main_exact.cpp  main_greedy.cpp  main_unified.cpp
src/core/: SolutionConverter.cpp  SolutionTransformer.cpp  Solver.cpp  UnifiedSolution.cpp
src/core/database/: UnifiedSolutionDatabase.cpp
src/data/: DataLoader.cpp
src/exact/callback/: Callback.cpp
src/exact/config/: Config.cpp
src/exact/solver/: GurobiSolver.cpp
src/greedy/analysis/: GreedySolutionPrinter.cpp
src/greedy/solver/: GreedySolver.cpp
src/logger/: TSPResultLogger.cpp  TSPResultLogger.h
src/mdvsp/analysis/: MDVSPAnalyzer.cpp
src/mdvsp/config/: MDVSPConfigurator.cpp
src/mdvsp/file/: MDVSPFileHandler.cpp
src/mdvsp/solver/: MDVSPSolver.cpp
src/mdvsp/utils/: MDVSPUtils.cpp
src/mutation/: MutationStrategy.h  ReverseMutation.cpp  ReverseMutation.h  SwapMutation.cpp  SwapMutation.h
src/reader/: TSPLibReader.cpp  TSPLibReader.h
src/settings/: GeneticAlgorithmConfig.h
src/solver/: TSPSolver.cpp  TSPSolver.h
src/solver/exact/: TSPSolver.cpp  TSPSolver.h
src/solver/genetic/: GeneticAlgorithmParadiseo.cpp  GeneticAlgorithmParadiseo.h
src/solver/heuristic/: SimulatedAnnealingParadiseo.cpp  SimulatedAnnealingParadiseo.h  SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.h
